finalize app